@@ -1,6 +1,6 @@
 /*
 ** frandom.c
-**      Fast pseudo-random generator 
+**      Fast pseudo-random generator
 **
 **      (c) Copyright 2003-2011 Eli Billauer
 **      http://www.billauer.co.il
@@ -19,13 +19,13 @@
 
 #include <linux/kernel.h>
 #include <linux/init.h>
-#include <linux/slab.h> 
-#include <linux/fs.h> 
+#include <linux/slab.h>
+#include <linux/fs.h>
 #include <linux/errno.h>
-#include <linux/types.h> 
+#include <linux/types.h>
 #include <linux/random.h>
 
-#include <asm/uaccess.h>
+#include <linux/uaccess.h>
 #include <linux/cdev.h>
 #include <linux/err.h>
 #include <linux/device.h>
@@ -34,8 +34,8 @@
 #define EXTERNAL_SEED 1
 
 #define FRANDOM_MAJOR 235
-#define FRANDOM_MINOR 11 
-#define ERANDOM_MINOR 12 
+#define FRANDOM_MINOR 11
+#define ERANDOM_MINOR 12
 
 static struct file_operations frandom_fops; /* Values assigned below */
 
@@ -73,7 +73,7 @@ struct frandom_state
 	struct semaphore sem; /* Semaphore on the state structure */
 
 	u8 S[256]; /* The state array */
-	u8 i;        
+	u8 i;
 	u8 j;
 
 	char *buf;
@@ -83,10 +83,9 @@ static struct frandom_state *erandom_state;
 
 static inline void swap_byte(u8 *a, u8 *b)
 {
-	u8 swapByte; 
-  
-	swapByte = *a; 
-	*a = *b;      
+	u8 swapByte;
+	swapByte = *a;
+	*a = *b;
 	*b = swapByte;
 }
 
@@ -100,7 +99,7 @@ void erandom_get_random_bytes(char *buf, size_t count)
 	unsigned int i;
 	unsigned int j;
 	u8 *S;
-  
+
 	/* If we fail to get the semaphore, we revert to external random data.
 	   Since semaphore blocking is expected to be very rare, and interrupts
 	   during these rare and very short periods of time even less frequent,
@@ -118,16 +117,16 @@ void erandom_get_random_bytes(char *buf, size_t count)
 	   RNG is already restored in the boot sequence (not critical, but
 	   better.
 	*/
-	
+
 	if (!erandom_seeded) {
 		erandom_seeded = 1;
 		init_rand_state(state, EXTERNAL_SEED);
 		printk(KERN_INFO "frandom: Seeded global generator now (used by erandom)\n");
 	}
 
-	i = state->i;     
+	i = state->i;
 	j = state->j;
-	S = state->S;  
+	S = state->S;
 
 	for (k=0; k<count; k++) {
 		i = (i + 1) & 0xff;
@@ -135,8 +134,8 @@ void erandom_get_random_bytes(char *buf, size_t count)
 		swap_byte(&S[i], &S[j]);
 		*buf++ = S[(S[i] + S[j]) & 0xff];
 	}
- 
-	state->i = i;     
+
+	state->i = i;
 	state->j = j;
 
 	up(&state->sem);
@@ -182,7 +181,7 @@ static void init_rand_state(struct frandom_state *state, int seedflag)
 
 static int frandom_open(struct inode *inode, struct file *filp)
 {
-  
+
 	struct frandom_state *state;
 
 	int num = iminor(inode);
@@ -191,7 +190,7 @@ static int frandom_open(struct inode *inode, struct file *filp)
 	 * explicitly
 	 */
 	if ((num != frandom_minor) && (num != erandom_minor)) return -ENODEV;
-  
+
 	state = kmalloc(sizeof(struct frandom_state), GFP_KERNEL);
 	if (!state)
 		return -ENOMEM;
@@ -221,7 +220,7 @@ static int frandom_release(struct inode *inode, struct file *filp)
 
 	kfree(state->buf);
 	kfree(state);
-  
+
 	return 0;
 }
 
@@ -236,18 +235,18 @@ static ssize_t frandom_read(struct file *filp, char *buf, size_t count,
 	unsigned int i;
 	unsigned int j;
 	u8 *S;
-  
+
 	if (down_interruptible(&state->sem))
 		return -ERESTARTSYS;
-  
+
 	if ((frandom_chunklimit > 0) && (count > frandom_chunklimit))
 		count = frandom_chunklimit;
 
 	ret = count; /* It's either everything or an error... */
-  
-	i = state->i;     
+
+	i = state->i;
 	j = state->j;
-	S = state->S;  
+	S = state->S;
 
 	while (count) {
 		if (count > frandom_bufsize)
@@ -263,7 +262,7 @@ static ssize_t frandom_read(struct file *filp, char *buf, size_t count,
 			swap_byte(&S[i], &S[j]);
 			*localbuf++ = S[(S[i] + S[j]) & 0xff];
 		}
- 
+
 		if (copy_to_user(buf, state->buf, dobytes)) {
 			ret = -EFAULT;
 			goto out;
@@ -274,7 +273,7 @@ static ssize_t frandom_read(struct file *filp, char *buf, size_t count,
 	}
 
  out:
-	state->i = i;     
+	state->i = i;
 	state->j = j;
 
 	up(&state->sem);
@@ -308,7 +307,7 @@ static int frandom_init_module(void)
 
 	/* The buffer size MUST be at least 256 bytes, because we assume that
 	   minimal length in init_rand_state().
-	*/       
+	*/
 	if (frandom_bufsize < 256) {
 		printk(KERN_ERR "frandom: Refused to load because frandom_bufsize=%d < 256\n",frandom_bufsize);
 		return -EINVAL;
@@ -340,7 +339,6 @@ static int frandom_init_module(void)
 		printk(KERN_WARNING "frandom: Failed to register class fastrng\n");
 		goto error0;
 	}
-	
 	/*
 	 * Register your major, and accept a dynamic number. This is the
 	 * first thing to do, in order to avoid releasing other module's
@@ -406,7 +404,7 @@ static int frandom_init_module(void)
 	kfree(erandom_state->buf);
 	kfree(erandom_state);
 
-	return result;	
+	return result;
 }
 
 module_init(frandom_init_module);
